--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Online Shop</title>
+    <link rel="stylesheet" href="src/assets/css/font-awesome.min.css">
   </head>
   <body>
     <div id="app"></div>
